--- a/crud/crud/src/main/resources/application.properties
+++ b/crud/crud/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=crud
-spring.datasource.url = jdbc:mysql://localhost:3306/crud?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/crud?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false&allowPublicKeyRetrieval=true
 
 # nombre de usuario y contraseña
-spring.datasource.username = username
-spring.datasource.password = password
+spring.datasource.username = root
+spring.datasource.password = root
 
 # mostrar sentencias SQL en la consola
 spring.jpa.show-sql = true
@@ -12,4 +12,4 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 # hibernate genera SQL optimizado
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
