--- a/crud/crud/pom.xml
+++ b/crud/crud/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.17.0</version>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 
 	</dependencies>
 
