--- a/crud/crud/src/main/resources/application.properties
+++ b/crud/crud/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=crud
-spring.datasource.url=jdbc:mysql://localhost:3306/crud?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/crud?useSSL=false&&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDateTimeCode=false&allowPublicKeyRetrieval=true
 
 # nombre de usuario y contraseña
 spring.datasource.username = root
