skip tests en json

--- a/crudFRONT/angular.json
+++ b/crudFRONT/angular.json
@@ -5,7 +5,9 @@
   "projects": {
     "crudFRONT": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {"@schematics/angular:class": {
+          "skipTests": true
+        }},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
